# SensitivitySurrogacy

./: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md
R/: copula_helpers.R  longterm_copula.R  longterm_partial_id.R  nuisance_copula.R  nuisance_partial_id.R  nuisance_shared.R  validation.R
man/: frank_param_from_tau.Rd  longterm_copula.Rd  longterm_partial_id.Rd  plackett_param_from_tau.Rd
python/: .gitignore  README.md  pyproject.toml
python/sensitivity_surrogacy/: __init__.py  copula_helpers.py  longterm_copula.py  longterm_partial_id.py  nuisance_copula.py  nuisance_partial_id.py  nuisance_shared.py  validation.py
